fixed overflow-x

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100;300;400;500;600;700;800&display=swap');
 
 body {
-    width: 1200px;
-    margin: auto;
+    max-width: 1200px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     background-color: black;
     font-family: 'Lexend', sans-serif;
 }
@@ -38,11 +40,13 @@ body {
 }
 
 .input-block {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     background-color: white;
     width: 35rem;
     height: auto;
     border-radius: 1rem;
-    margin: auto;
     padding: 1px 20px 1.5rem 20px;
     margin-block-end: 2rem;
 }
@@ -75,11 +79,13 @@ body {
 }
 
 .render-block {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     background-color: white;
     width: 35rem;
     height: auto;
     border-radius: 1rem;
-    margin: auto;
     padding: 1px 20px 1.5rem 20px;
     margin-block-start: 2rem;
     margin-block-end: 2rem;
